--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# intelliJ File #
+**.idea
+**.iml
+.Rapp.history
+
+# Maven
+target/
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+/repo/
+/result/
+/tmpDir/
+.classpath
+.project
+.settings/
