--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
----
 language: java
 
-
-cache:
-  directories:
-  - $HOME/.m2
-
 jdk:
-- oraclejdk8
+  - oraclejdk8
+
+install: true
 
 script:
-- mvn clean compile
+  - mvn clean compile
 
 after_success:
-- mvn clean test jacoco:report coveralls:report
+  - mvn clean test jacoco:report coveralls:report
