Update Main class

--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -45,7 +45,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>eu.stamp.botsing.reproduction.Main</mainClass>
+                            <mainClass>eu.stamp.botsing.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
