--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+!sample.log
 
 # BlueJ files
 *.ctxt
@@ -12,6 +13,7 @@
 
 # Package Files #
 *.jar
+!atos.jar
 *.war
 *.nar
 *.ear
@@ -45,3 +47,4 @@ Thumbs.db
 .classpath
 .project
 .settings/
+
