Adding documentation for contributors

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <inceptionYear>2017</inceptionYear>
 
     <organization>
-        <name>eu.stamp-project</name>
-        <url>http://github.com/STAMP-project</url>
+        <name>Delft University of Technology</name>
+        <url>https://www.tudelft.nl</url>
     </organization>
 
     <licenses>
