--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <evosuite-client.version>1.0.6</evosuite-client.version>
+        <commons-cli.version>1.4</commons-cli.version>
     </properties>
 
     <profiles>
