--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: java
 jdk:
   - oraclejdk8
 
+install: true
+
 script: mvn package checkstyle:check
 
 before_script:
   - mvn clean
 
 after_success:
-  - mvn test jacoco:report coveralls:report
+  - mvn jacoco:report coveralls:report
