Moving Mockito version to parent pom and updating Main class

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
+        <mockito.version>2.23.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <evosuite-client.version>1.0.6</evosuite-client.version>
         <commons-cli.version>1.4</commons-cli.version>
