--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -31,12 +31,18 @@
             <groupId>org.evosuite</groupId>
             <artifactId>evosuite-client</artifactId>
             <version>${evosuite-client.version}</version>
+           	<!--<exclusions>
+           		<exclusion>
+		            <groupId>ch.qos.logback</groupId>
+   			        <artifactId>logback-classic</artifactId>
+   			     </exclusion>
+           	</exclusions>-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.23.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -52,7 +58,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>eu.stamp.botsing.Main</mainClass>
+                            <mainClass>eu.stamp.botsing.Botsing</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
