Adding new maven module for crash example Adding integration test cases Updating the pom files

--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,7 @@
     </build>
 
     <modules>
+        <module>botsing-examples</module>
         <module>botsing-reproduction</module>
         <module>botsing-maven</module>
         <module>botsing-preprocessing</module>
