--- a/botsing-examples/pom.xml
+++ b/botsing-examples/pom.xml
@@ -20,4 +20,21 @@
         </dependency>
     </dependencies>
 
+<build>
+    <plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-checkstyle-plugin</artifactId>
+		<version>2.17</version>
+		<dependencies>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>1.7.5</version>
+			</dependency>
+		</dependencies>
+	</plugin>
+    </plugins>
+</build>
+
 </project>
