updating integration test to generate files in target/ directory + adding assertions on generated output

--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest-all.version}</version>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
 
