--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <!-- To ensure a proper management of dependencies, all versions have to be declared here -->
         <build-helper-maven-plugin.version>1.12</build-helper-maven-plugin.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
-        <hamcrest-all.version>1.3</hamcrest-all.version>
+        <hamcrest.version>2.0.0.0</hamcrest.version>
         <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
         <junit.version>4.12</junit.version>
         <license-maven-plugin.version>1.16</license-maven-plugin.version>
