--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.stamp-project</groupId>
     <artifactId>botsing</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>botsing</name>
@@ -47,7 +45,7 @@
         <connection>scm:git:git://github.com:STAMP-project/botsing.git</connection>
         <developerConnection>scm:git:git@github.com:STAMP-project/botsing.git</developerConnection>
         <url>https://github.com/STAMP-project/botsing</url>
-        <tag>HEAD</tag>
+        <tag>botsing-1.0.0</tag>
     </scm>
 
     <distributionManagement>
