--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <url>https://github.com/STAMP-project/botsing</url>
         <tag>HEAD</tag>
     </scm>
-
+<!--
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh-snapshots</id>
@@ -60,7 +60,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
+-->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -69,7 +69,9 @@
         <!-- Dependencies versions -->
         <!-- To ensure a proper management of dependencies, all versions have to be declared here -->
         <build-helper-maven-plugin.version>1.12</build-helper-maven-plugin.version>
+        <commons-cli.version>1.4</commons-cli.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+        <evosuite-client.version>1.0.6</evosuite-client.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
         <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
         <junit.version>4.12</junit.version>
@@ -82,8 +84,7 @@
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
         <mockito.version>2.23.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-        <evosuite-client.version>1.0.6</evosuite-client.version>
-        <commons-cli.version>1.4</commons-cli.version>
+        <wagon-ssh.version>2.12</wagon-ssh.version>
     </properties>
 
     <profiles>
@@ -173,6 +174,13 @@
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.wagon</groupId>
+                                <artifactId>wagon-ssh</artifactId>
+                                <version>${wagon-ssh.version}</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                     -->
                     <plugin>
