Initialize botsing-model-generation

--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,7 @@
         <module>botsing-reproduction</module>
         <module>botsing-maven</module>
         <module>botsing-preprocessing</module>
+        <module>botsing-model-generation</module>
     </modules>
 
 </project>
