Add Gson as the dependency of model generation

--- a/botsing-model-generation/pom.xml
+++ b/botsing-model-generation/pom.xml
@@ -24,6 +24,12 @@
             <version>${evosuite-client.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
