--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <mockito.version>2.23.0</mockito.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <wagon-ssh.version>2.12</wagon-ssh.version>
+        <gson.version>2.8.5</gson.version>
     </properties>
 
     <profiles>
