--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <wagon-ssh.version>2.12</wagon-ssh.version>
         <gson.version>2.8.5</gson.version>
+        <yami.version>1.1.0</yami.version>
     </properties>
 
     <profiles>
