--- a/botsing-maven/pom.xml
+++ b/botsing-maven/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>botsing</artifactId>
 		<groupId>eu.stamp-project</groupId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
