--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>eu.stamp-project</groupId>
     <artifactId>botsing</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>botsing</name>
@@ -45,7 +45,7 @@
         <connection>scm:git:git://github.com:STAMP-project/botsing.git</connection>
         <developerConnection>scm:git:git@github.com:STAMP-project/botsing.git</developerConnection>
         <url>https://github.com/STAMP-project/botsing</url>
-        <tag>botsing-1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
