--- a/botsing-preprocessing/pom.xml
+++ b/botsing-preprocessing/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>botsing</artifactId>
 		<groupId>eu.stamp-project</groupId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<developers>
 		<developer>
@@ -100,7 +100,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore />
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
