Refactoring integration test of model generation to avoid polluting the project directory

--- a/botsing-model-generation/pom.xml
+++ b/botsing-model-generation/pom.xml
@@ -11,6 +11,23 @@
 
     <artifactId>botsing-model-generation</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
         <dependency>
             <groupId>commons-cli</groupId>
@@ -35,7 +52,6 @@
             <artifactId>yami-tool</artifactId>
             <version>${yami.version}</version>
         </dependency>
-
 
     </dependencies>
 
