Updating parameter names to have a consistent naming style

--- a/botsing-reproduction/src/main/resources/config.properties
+++ b/botsing-reproduction/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 population = 100
 search_budget = 1800
 max_recursion = 30
-test_dir = CrashReproduction-tests
+test_dir = crashreproduction-tests
 global_timeout = 1800
