annotation removal WIP

--- a/botsing-preprocessing/pom.xml
+++ b/botsing-preprocessing/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>asm-util</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-commons</artifactId>
+			<version>${asm.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
