--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>evosuite-client</artifactId>
             <version>${evosuite-client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>be.unamur.info</groupId>
+            <artifactId>vibes-dsl</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
