--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <wagon-ssh.version>2.12</wagon-ssh.version>
         <gson.version>2.8.5</gson.version>
         <yami.version>1.1.0</yami.version>
+        <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
     </properties>
 
     <profiles>
@@ -264,6 +265,139 @@
                 <version>${coveralls-maven-plugin.version}</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>${maven-shade-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                            <configuration>
+                                <shadedArtifactAttached>false</shadedArtifactAttached>
+                                <createDependencyReducedPom>true</createDependencyReducedPom>
+                                <!-- do not change "org.evosuite.shaded." as it used in some of the java classes -->
+                                <relocations>
+                                    <relocation>
+                                        <pattern>org.objectweb.asm</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.objectweb.asm</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.hibernate</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.hibernate</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.hsqldb</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.hsqldb</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.jboss</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.jboss</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.springframework</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.springframework</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.apache.commons.logging</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.apache.commons.logging</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>javassist</pattern>
+                                        <shadedPattern>org.evosuite.shaded.javassist</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>antlr</pattern>
+                                        <shadedPattern>org.evosuite.shaded.antlr</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.antlr</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.antlr</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.dom4j</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.dom4j</shadedPattern>
+                                    </relocation>
+                                    <!--
+                                    <relocation>
+                                        <pattern>org.xml</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.xml</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.w3c</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.w3c</shadedPattern>
+                                    </relocation>
+                                    -->
+                                    <relocation>
+                                        <pattern>org.aopalliance</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.aopalliance</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.mockito</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.mockito</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>net.bytebuddy</pattern>
+                                        <shadedPattern>org.evosuite.shaded.net.bytebuddy</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <!-- This is special. Originally we wanted to handle it directly, but
+                                         did not turn out to be a good idea. However, too early to remove
+                                         that code, so we just shade this package to avoid backward
+                                         compatibility issues
+                                         -->
+                                        <pattern>javax.servlet</pattern>
+                                        <shadedPattern>org.evosuite.shaded.javax.servlet</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.apache</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.apache</shadedPattern>
+                                        <excludes>
+                                            <!-- Important, otherwise AntInitializingListener would not work in Ant -->
+                                            <exclude>org.apache.tools.ant.taskdefs.optional.junit.JUnitResultFormatter</exclude>
+                                            <exclude>org.apache.tools.ant.taskdefs.optional.junit.JUnitTest</exclude>
+                                            <exclude>org.apache.tools.ant.BuildException</exclude>
+                                        </excludes>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.hamcrest</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.hamcrest</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>org.objenesis</pattern>
+                                        <shadedPattern>org.evosuite.shaded.org.objenesis</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>be.vibes</pattern>
+                                        <shadedPattern>org.evosuite.shaded.be.vibes</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>be.yami</pattern>
+                                        <shadedPattern>org.evosuite.shaded.be.yami</shadedPattern>
+                                    </relocation>
+                                    <relocation>
+                                        <pattern>com.google</pattern>
+                                        <shadedPattern>org.evosuite.shaded.com.google</shadedPattern>
+                                    </relocation>
+                                    <!--<relocation>-->
+                                    <!--<pattern>org.slf4j</pattern>-->
+                                    <!--<shadedPattern>org.evosuite.shaded.org.slf4j</shadedPattern>-->
+                                    <!--</relocation>-->
+                                    <!--<relocation>-->
+                                    <!--<pattern>ch.qos.logback</pattern>-->
+                                    <!--<shadedPattern>org.evosuite.shaded.ch.qos.logback</shadedPattern>-->
+                                    <!--</relocation>-->
+                                </relocations>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <modules>
