--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script: mvn package checkstyle:check
 
 before_script:
   - mvn clean
+  - mvn install:install-file -Dfile=botsing-reproduction/evosuite-client-botsing-1.0.6.jar -DgroupId=org.evosuite -DartifactId=evosuite-client-botsing -Dversion=1.0.6 -Dpackaging=jar
 
 after_success:
   - mvn jacoco:report coveralls:report
