--- a/botsing-preprocessing/pom.xml
+++ b/botsing-preprocessing/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>botsing</artifactId>
 		<groupId>eu.stamp-project</groupId>
-		<version>1.0.3</version>
+		<version>1.0.4-SNAPSHOT</version>
 	</parent>
 	<developers>
 		<developer>
