--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>be.unamur.info</groupId>
             <artifactId>vibes-dsl</artifactId>
-            <version>2.0.2</version>
+            <version>${vibes.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
