--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <wagon-ssh.version>2.12</wagon-ssh.version>
         <gson.version>2.8.5</gson.version>
         <yami.version>1.1.0</yami.version>
+        <vibes.version>2.0.2</vibes.version>
         <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
     </properties>
 
