--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.stamp-project</groupId>
+            <artifactId>botsing-commons</artifactId>
+            <version>1.0.4-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
