--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,7 @@
     </build>
 
     <modules>
+        <module>botsing-commons</module>
         <module>botsing-examples</module>
         <module>botsing-reproduction</module>
         <module>botsing-maven</module>
