Instrument multiple classes in integration testing mode

--- a/botsing-reproduction/pom.xml
+++ b/botsing-reproduction/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>eu.stamp-project</groupId>
             <artifactId>botsing-commons</artifactId>
-            <version>1.0.4-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
