--- a/botsing-maven/pom.xml
+++ b/botsing-maven/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>maven-aether-provider</artifactId>
 			<version>${maven-aether-provider.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <version>3.1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
