--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,11 @@
         <antlr.version>4.7.2</antlr.version>
         <build-helper-maven-plugin.version>1.12</build-helper-maven-plugin.version>
         <commons-cli.version>1.4</commons-cli.version>
-        <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+        <!-- <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version> -->
         <evosuite-client.version>1.0.6</evosuite-client.version>
         <guava.version>27.0.1-jre</guava.version>
         <hamcrest.version>2.0.0.0</hamcrest.version>
-        <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
         <junit.version>4.12</junit.version>
         <license-maven-plugin.version>1.16</license-maven-plugin.version>
         <logback-classic.version>1.1.3</logback-classic.version>
@@ -266,7 +266,7 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>${coveralls-maven-plugin.version}</version>
+                <!-- <version>${coveralls-maven-plugin.version}</version> -->
             </plugin>
         </plugins>
         <pluginManagement>
