setting catch_undeclared_exceptions=FALSE by default to remove try/catch from the generated tests

--- a/botsing-reproduction/src/main/resources/config.properties
+++ b/botsing-reproduction/src/main/resources/config.properties
@@ -4,3 +4,4 @@ max_recursion = 30
 test_dir = crash-reproduction-tests
 no_runtime_dependency = true
 global_timeout = 1800
+catch_undeclared_exceptions=FALSE
