- specify maven-site-plugin to version 3.7.1 because of doxia-site-renderer NoClassDefFoundError error when building maven site

--- a/pom.xml
+++ b/pom.xml
@@ -267,7 +267,12 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <!-- <version>${coveralls-maven-plugin.version}</version> -->
-            </plugin>
+		</plugin>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-site-plugin</artifactId>
+		    <version>3.7.1</version>
+		</plugin>
         </plugins>
         <pluginManagement>
             <plugins>
