--- a/botsing-maven/pom.xml
+++ b/botsing-maven/pom.xml
@@ -67,11 +67,11 @@
 			<artifactId>maven-aether-provider</artifactId>
 			<version>${maven-aether-provider.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-dependency-plugin</artifactId>
-		    <version>3.1.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${maven-dependency-plugin.version}</version>
 		</dependency>
 
 		<dependency>
