--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
   - mvn install:install-file -Dfile=botsing-reproduction/evosuite-client-botsing-1.0.7.jar -DgroupId=org.evosuite -DartifactId=evosuite-client-botsing -Dversion=1.0.7 -Dpackaging=jar
 
 after_success:
-  - mvn jacoco:report coveralls:report
+  - mvn clean test jacoco:report coveralls:report
