Adding ClassPaths utility class to cleanup a given classpath

--- a/botsing-commons/pom.xml
+++ b/botsing-commons/pom.xml
@@ -10,7 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>botsing-commons</artifactId>
+
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.evosuite</groupId>
             <artifactId>evosuite-client-botsing</artifactId>
