Update main class in the pom

--- a/botsing-model-generation/pom.xml
+++ b/botsing-model-generation/pom.xml
@@ -71,7 +71,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>eu.stamp.botsing.model.generation.Main</mainClass>
+                            <mainClass>eu.stamp.botsing.model.generation.ModelGeneration</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
