Setting default value of no_runtime_dependency to false. Fixing #70

--- a/botsing-reproduction/src/main/resources/config.properties
+++ b/botsing-reproduction/src/main/resources/config.properties
@@ -2,6 +2,6 @@ population = 100
 search_budget = 1800
 max_recursion = 30
 test_dir = crash-reproduction-tests
-no_runtime_dependency = true
+no_runtime_dependency = false
 global_timeout = 1800
-catch_undeclared_exceptions=FALSE
+catch_undeclared_exceptions = false
