--- a/botsing-maven/pom.xml
+++ b/botsing-maven/pom.xml
@@ -26,6 +26,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.evosuite</groupId>
+			<artifactId>evosuite-standalone-runtime</artifactId>
+			<version>${evosuite.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
 			<version>${maven-plugin-api.version}</version>
