Fixing Coverall coverage reporting. Generated classes should be excluded from Jacoco coverage reports (see for instance botsing-parsers/pom.xml). Classes should have a unique name across all modules in the project.

--- a/botsing-parsers/pom.xml
+++ b/botsing-parsers/pom.xml
@@ -73,6 +73,27 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesLexer.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesLexer$*.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParser.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParser$*.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParserBaseListener.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParserBaseVisitor.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParserListener.*</exclude>
+                            <exclude>**/eu/stamp/botsing/parsers/StackTracesParserVisitor.*</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
