--- a/botsing-maven/pom.xml
+++ b/botsing-maven/pom.xml
@@ -108,6 +108,20 @@
 				</executions>
 			</plugin>
 		</plugins>
-
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+					<configuration>
+                        <excludes>
+                            <exclude>**/eu/stamp/botsing/HelpMojo.*</exclude>
+                        </excludes>
+                    </configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
+
 </project>
