Set instrument_libraries to true by default

--- a/botsing-reproduction/src/main/resources/config.properties
+++ b/botsing-reproduction/src/main/resources/config.properties
@@ -5,3 +5,4 @@ test_dir = crash-reproduction-tests
 no_runtime_dependency = false
 global_timeout = 1800
 catch_undeclared_exceptions = false
+instrument_libraries = true
