--- a/botsing-commons/pom.xml
+++ b/botsing-commons/pom.xml
@@ -29,5 +29,17 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <runOrder>alphabetical</runOrder>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
