Update gitignore to ignore local files of integration testing module

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ Thumbs.db
 # local test directory
 **/test/**/botsing/local/
 **/test/**/botsing/model/generation/local/
+**/test/**/botsing/integration/local/
 
 
 # Generated website
