Change the main class of the integration tool

--- a/botsing-integration/pom.xml
+++ b/botsing-integration/pom.xml
@@ -65,7 +65,7 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
-                            <Main-Class>eu.stamp.botsing.Botsing</Main-Class>
+                            <Main-Class>eu.stamp.botsing.integration.BotsingIntegration</Main-Class>
                             <Premain-Class>org.evosuite.runtime.agent.InstrumentingAgent</Premain-Class>
                             <Agent-Class>org.evosuite.runtime.agent.InstrumentingAgent</Agent-Class>
                             <Can-Redefine-Classes>true</Can-Redefine-Classes>
