--- a/pom.xml
+++ b/pom.xml
@@ -419,7 +419,7 @@
         <module>botsing-preprocessing</module>
         <module>botsing-model-generation</module>
         <module>botsing-parsers</module>
-        <module>botsing-integration</module>
+        <module>cling</module>
         <module>botsing-class-coupling-analyzer</module>
     </modules>
 
